2005-11-06  Michael Natterer  <mitch@imendio.com>

	* gtk/Makefile.am (icons): fixed rule to actually create the
	symlinks, erroring out if anything goes wrong.

2005-11-06  Tor Lillqvist  <tml@novell.com>

	* gtk/updateiconcache.c (build_cache): Can't rename a file if the
	target exists on Win32. First rename the target temporarily, then
	if the renaming of the source to target fails, restore the
	original name for the target.

	* gtk/Makefile.am: Use EXEEXT in the dependency on gtk-update-icon-cache.

2005-11-06  Tor Lillqvist  <tml@novell.com>

	(pixbuf_to_hbitmaps_alpha_winxp): Use an 1-bit mask bitmap,
	like pixbuf_to_hbitmaps_normal().
	(_gdk_win32_pixbuf_to_hicon_supports_alpha): Check
	G_WIN32_IS_NT_BASED() first, so we can pretend being on Win9x by
	setting the G_WIN32_PRETEND_WIN9X environment variable.
	
2005-11-06  Tor Lillqvist  <tml@novell.com>

	Make icon masks work on Win98 (#320152, Peter Zelezny)

	* gdk/win32/gdkcursor-win32.c (create_color_bitmap): Take also a
	parameter for the depth of the bitmap, so that this function can
	be used to create 1-bit bitmaps, too.
	(pixbuf_to_hbitmaps_normal): Create an 1-bit bitmap for the mask,
	and initialize it properly.

2005-11-04  Matthias Clasen  <mclasen@redhat.com>

	Store builtin stock icons in an icon cache, instead of
	populating a hash table with pixbufs at startup, to save both
	memory and startup time.

	* gtk/stock-icons/*: Reorganize the icons in a directory structure
	suitable for gtk-update-icon-cache, and rename them to match the
	stock ids.

	* gtk/gtkiconcache.[hc]: Support non-mmapped icon caches, and
	add _gtk_icon_cache_has_icon_in_directory().

	* gtk/updateiconcache.c: Support a --source <VARIABLE> argument
	to store the contents of the icon cache in a C header.

	* gtk/gtkbuiltincache.h: Generated private header which contains 
	the icon cache for the builtin icons.

	* gtk/gtkicontheme.c: Create a GtkIconCache for the builtin